// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when large 1`] = `
.emotion-0 {
  position: relative;
  border-radius: 9999px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #199473;
  width: 48px;
  height: 48px;
  background-color: #C6F7E2;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg .primary {
  fill: #65D6AD;
}

.emotion-0 svg .secondary {
  fill: #199473;
}

<div>
  <span
    class="emotion-0"
  />
</div>
`;

exports[`should match snapshot when small 1`] = `
.emotion-0 {
  position: relative;
  border-radius: 9999px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #199473;
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg .primary {
  fill: #65D6AD;
}

.emotion-0 svg .secondary {
  fill: #199473;
}

<div>
  <span
    class="emotion-0"
  />
</div>
`;
